--- a/pages /hablemos.html
+++ b/pages /hablemos.html
@@ -19,7 +19,7 @@
 
     <nav>
       <ul class="subMenu">
-        <li class="subMenu_item"><a href="./index.html">Inicio</a></li>
+        <li class="subMenu_item"><a href="../index.html">Inicio</a></li>
         <li class="subMenu_item"><a href="./nuestro_trabajo.html">Nuestro Trabajo </a></li>
         <li class="subMenu_item"><a href="./servicio.html">Servicios </a></li>
         <li class="subMenu_item"><a href="./conocenos.html">Conócenos</a></li>
@@ -29,11 +29,13 @@
     </nav>
 
   </header>
-  <div>
-    <img class="mapImg" src="../img/hablemos/map.jpg" alt="mapUbicacion">
-  </div>
-
-  <h4> Contacto </h4>
+  
+  <main>
+    <nav class="mapImg">
+      <img src="../img/hablemos/map.jpg" alt="mapUbicacion">
+    </nav>
+  
+    <h4> Contacto </h4>
   <nav class="containerForm">
    
       <form>
@@ -52,7 +54,7 @@
       </form>
     
   </nav>
-
+</main>
 </body>
 
 <footer>
