--- a/pages/trabaja_con_nosotros.html
+++ b/pages/trabaja_con_nosotros.html
@@ -16,15 +16,32 @@
       <img class="logoImg" src="../img/logo.jpg" alt="logoBeck">
     </div>
 
-    <nav>
-      <ul class="subMenu">
-        <li class="subMenu_item"><a href="./index.html">Inicio</a></li>
-        <li class="subMenu_item"><a href="./nuestro_trabajo.html">Nuestro Trabajo </a></li>
-        <li class="subMenu_item"><a href="./servicio.html">Servicios </a></li>
-        <li class="subMenu_item"><a href="./conocenos.html">Conócenos</a></li>
-        <li class="subMenu_item"><a href="./trabaja_con_nosotros.html">Trabaja con nosotros</a></li>
-        <li class="subMenu_item"><a href="./hablemos.html">Hablemos</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="./index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./nuestro_trabajo.html">Nuestro Trabajo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./servicio.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./conocenos.html">Conócenos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./trabaja_con_nosotros.html">Trabaja con nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./hablemos.html">Hablemos</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
   </header>
