ya me aburre el error

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a class="nav-link" href="./pages/nuestro_trabajo.html">Nuestro Trabajo</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/servicio.html">Servicios</a>
+          <a class="nav-link" href="./pages/servicio.html">Servicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./pages/conocenos.html">Conócenos</a>
