--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="./nuestro_trabajo.html">Nuestro Trabajo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./servicio.html">Servicios</a>
+            <a class="nav-link" href="./servicio.html">Servicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./conocenos.html">Conócenos</a>
