--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -53,21 +53,21 @@
       <h4>EQUIPO</h4>
 
       <div class="cards">
-        <div class="card">
+        <div class="card translate">
           <img src="../img/equipo/trabajador.png">
           <a href="https://tinyurl.com/2df8opcy">
             <h3>Trabajador 1 </h3>
           </a>
         </div>
 
-        <div class="card">
+        <div class="card translate">
           <img src="../img/equipo/trabajador.png">
           <a href="https://www.metaldoor.cl/puertas/puertas-corta-fuego/">
             <h3>Trabajador 2 </h3>
           </a>
         </div>
 
-        <div class="card">
+        <div class="card translate">
           <img src="../img/equipo/trabajador.png">
           <a href="https://mercortecresa.com/evacuacion-de-humos/barreras-sectorizadoras">
             <h3>Trabajador 3 </h3>
