--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -53,21 +53,21 @@
       <h4>SERVICIOS</h4>
 
       <div class="cards">
-        <div class="card">
+        <div class="card translate">
           <img src="../img/servicios/cortaFuego.png">
           <a href="https://tinyurl.com/2df8opcy">
             <h3>Pintura intumescente</h3>
           </a>
         </div>
 
-        <div class="card">
+        <div class="card translate">
           <img src="../img/servicios/cortaFuego.png">
           <a href="https://www.metaldoor.cl/puertas/puertas-corta-fuego/">
             <h3>Puertas cortafuego</h3>
           </a>
         </div>
 
-        <div class="card">
+        <div class="card translate">
           <img src="../img/servicios/cortaFuego.png">
           <a href="https://mercortecresa.com/evacuacion-de-humos/barreras-sectorizadoras">
             <h3>Sist de barreras de Humo</h3>
