--- a/pages/trabaja_con_nosotros.html
+++ b/pages/trabaja_con_nosotros.html
@@ -51,19 +51,19 @@
       <h4>PUESTO A POSTULAR</h4>
 
       <div class="cards">
-        <div class="card">
+        <div class="card translate">
           <img src="../img/trabaja_con_nosotros /cv.png">
           <h3>Maestro carpintero</h3>
         </div>
 
-        <div class="card">
+        <div class="card translate">
           <img src="../img/trabaja_con_nosotros /cv.png">
-          <h3>Prevecionista Riesgos</h3>
+          <h3>Prevecionista riesgos</h3>
         </div>
 
-        <div class="card">
+        <div class="card translate">
           <img src="../img/trabaja_con_nosotros /cv.png">
-          <h3>Asistente Administrativa</h3>
+          <h3>Asistente administrativa</h3>
         </div>
 
       </div>
