--- a/pages/nuestro_trabajo.html
+++ b/pages/nuestro_trabajo.html
@@ -54,17 +54,17 @@
       <h4>NUESTRO TRABAJO</h4>
 
       <div class="cards">
-        <div class="card">
+        <div class="card translate">
           <img src="../img/nuestro_trabajo/metro .png">
           <a href="https://www.metro.cl"><h3>Metro</h3></a>
         </div>
 
-        <div class="card">
+        <div class="card translate">
           <img src="../img/nuestro_trabajo/hospSalvador.png">
           <a href="https://www.hsalvador.cl"><h3>Hospital El Salvador</h3></a>
         </div>
 
-        <div class="card">
+        <div class="card translate">
           <img src="../img/nuestro_trabajo/falabella .png">
           <a href="https://www.falabella.com"><h3>Falabella</h3></a>
         </div>
