--- a/pages/hablemos.html
+++ b/pages/hablemos.html
@@ -18,11 +18,11 @@
     <nav>
       <ul class="subMenu">
         <li class="subMenu_item"><a href="../index.html">Inicio</a></li>
-        <li class="subMenu_item"><a href="./pages/nuestro_trabajo.html">Nuestro Trabajo </a></li>
-        <li class="subMenu_item"><a href="./pages/servicio.html">Servicios </a></li>
-        <li class="subMenu_item"><a href="./pages/conocenos.html">Conócenos</a></li>
-        <li class="subMenu_item"><a href="./pages/trabaja_con_nosotros.html">Trabaja con nosotros</a></li>
-        <li class="subMenu_item"><a href="./pages/hablemos.html">Hablemos</a></li>
+        <li class="subMenu_item"><a href="./nuestro_trabajo.html">Nuestro Trabajo </a></li>
+        <li class="subMenu_item"><a href="./servicio.html">Servicios </a></li>
+        <li class="subMenu_item"><a href="./conocenos.html">Conócenos</a></li>
+        <li class="subMenu_item"><a href="./trabaja_con_nosotros.html">Trabaja con nosotros</a></li>
+        <li class="subMenu_item"><a href="./hablemos.html">Hablemos</a></li>
       </ul>
     </nav>
   </header>
