--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -56,21 +56,21 @@
         <div class="card translate">
           <img src="../img/equipo/trabajador.png">
           <a href="https://tinyurl.com/2df8opcy">
-            <h3>Trabajador 1 </h3>
+            <h3 class="textos translate">Trabajador 1 </h3>
           </a>
         </div>
 
         <div class="card translate">
           <img src="../img/equipo/trabajador.png">
           <a href="https://www.metaldoor.cl/puertas/puertas-corta-fuego/">
-            <h3>Trabajador 2 </h3>
+            <h3 class="textos translate">Trabajador 2 </h3>
           </a>
         </div>
 
         <div class="card translate">
           <img src="../img/equipo/trabajador.png">
           <a href="https://mercortecresa.com/evacuacion-de-humos/barreras-sectorizadoras">
-            <h3>Trabajador 3 </h3>
+            <h3 class="textos translate">Trabajador 3 </h3>
           </a>
         </div>
       </div>
