--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -56,21 +56,21 @@
         <div class="card translate">
           <img src="../img/servicios/cortaFuego.png">
           <a href="https://tinyurl.com/2df8opcy">
-            <h3>Pintura intumescente</h3>
+            <h3 class="textos translate">Pintura intumescente</h3>
           </a>
         </div>
 
         <div class="card translate">
           <img src="../img/servicios/cortaFuego.png">
           <a href="https://www.metaldoor.cl/puertas/puertas-corta-fuego/">
-            <h3>Puertas cortafuego</h3>
+            <h3 class="textos translate">Puertas cortafuego</h3>
           </a>
         </div>
 
         <div class="card translate">
           <img src="../img/servicios/cortaFuego.png">
           <a href="https://mercortecresa.com/evacuacion-de-humos/barreras-sectorizadoras">
-            <h3>Sist de barreras de Humo</h3>
+            <h3 class="textos translate">Sist de barreras de Humo</h3>
           </a>
         </div>
       </div>
