--- a/pages/trabaja_con_nosotros.html
+++ b/pages/trabaja_con_nosotros.html
@@ -52,17 +52,17 @@
 
       <div class="cards">
         <div class="card translate">
-          <img src="../img/trabaja_con_nosotros /cv.png">
+          <img src="../img/trabaja_con_nosotros/cv.png">
           <h3>Maestro carpintero</h3>
         </div>
 
         <div class="card translate">
-          <img src="../img/trabaja_con_nosotros /cv.png">
-          <h3>Prevecionista riesgos</h3>
+          <img src="../img/trabaja_con_nosotros/cv.png">
+          <h3>Prevencionista de riesgos</h3>
         </div>
 
         <div class="card translate">
-          <img src="../img/trabaja_con_nosotros /cv.png">
+          <img src="../img/trabaja_con_nosotros/cv.png">
           <h3>Asistente administrativa</h3>
         </div>
 
