--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -25,13 +25,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="./index.html">Inicio</a>
+            <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./nuestro_trabajo.html">Nuestro Trabajo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./servicio.html">Servicio</a>
+            <a class="nav-link" href="./servicio.html">Servicios</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./conocenos.html">Conócenos</a>
@@ -56,14 +56,14 @@
         <div class="card translate">
           <img src="../img/equipo/trabajador.png">
           <a href="https://tinyurl.com/2df8opcy">
-            <h3 class="textos translate">Trabajador 1 </h3>
+            <h3 class="textos translate">Trabajador 1</h3>
           </a>
         </div>
 
         <div class="card translate">
           <img src="../img/equipo/trabajador.png">
           <a href="https://www.metaldoor.cl/puertas/puertas-corta-fuego/">
-            <h3 class="textos translate">Trabajador 2 </h3>
+            <h3 class="textos translate">Trabajador 2</h3>
           </a>
         </div>
 
@@ -71,6 +71,13 @@
           <img src="../img/equipo/trabajador.png">
           <a href="https://mercortecresa.com/evacuacion-de-humos/barreras-sectorizadoras">
             <h3 class="textos translate">Trabajador 3 </h3>
+          </a>
+        </div>
+
+        <div class="card translate">
+          <img src="../img/equipo/trabajador.png">
+          <a href="https://mercortecresa.com/evacuacion-de-humos/barreras-sectorizadoras">
+            <h3 class="textos translate">Trabajador 4 </h3>
           </a>
         </div>
       </div>
