--- a/pages/hablemos.html
+++ b/pages/hablemos.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hablemos</title>
-  <link rel="stylesheet" href="../CSS/main.css">
-  <meta name ="keywords" content="cortafuego, pasivo, construccion, fuego, ingenieria, chile, santiago">
+  <link rel="stylesheet" href="./CSS/style.css">  <meta name ="keywords" content="cortafuego, cotizacion, contacto, ingenieria, chile, santiago">
 </head>
 
 <body>
@@ -19,11 +18,11 @@
     <nav>
       <ul class="subMenu">
         <li class="subMenu_item"><a href="../index.html">Inicio</a></li>
-        <li class="subMenu_item"><a href="./pages/nuestro_trabajo.html">Nuestro Trabajo </a></li>
-        <li class="subMenu_item"><a href="./pages/servicio.html">Servicios </a></li>
-        <li class="subMenu_item"><a href="./pages/conocenos.html">Conócenos</a></li>
-        <li class="subMenu_item"><a href="./pages/trabaja_con_nosotros.html">Trabaja con nosotros</a></li>
-        <li class="subMenu_item"><a href="./pages/hablemos.html">Hablemos</a></li>
+        <li class="subMenu_item"><a href="./nuestro_trabajo.html">Nuestro Trabajo </a></li>
+        <li class="subMenu_item"><a href="./servicio.html">Servicios </a></li>
+        <li class="subMenu_item"><a href="./conocenos.html">Conócenos</a></li>
+        <li class="subMenu_item"><a href="./trabaja_con_nosotros.html">Trabaja con nosotros</a></li>
+        <li class="subMenu_item"><a href="./hablemos.html">Hablemos</a></li>
       </ul>
     </nav>
   </header>
@@ -32,20 +31,20 @@
     <nav class="mapImg">
       <img src="../img/hablemos/map.jpg" alt="mapUbicacion">
     </nav>
-  
-    <h4> Contacto </h4>
-  <nav class="containerForm">
    
-     <form>
-  <div class="form-group">
+    <h4> Contacto </h4>
+   <nav class="containerForm">
+   
+   <form>
+   <div class="form-group">
     <label for="formGroupExampleInput">Nombre completo</label>
     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="nombre">
-  </div>
-  <div class="form-group">
+   </div>
+   <div class="form-group">
     <label for="exampleInputEmail1">Correo electrónico</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="ingrese su correo">
-  </div>
-  <div class="form-group">
+   </div>
+   <div class="form-group">
     <label for="exampleFormControlSelect1">Selecciona tu motivo del mensaje</label>
     <select class="form-control" id="exampleFormControlSelect1">
       <option>Cotizacion</option>
@@ -60,7 +59,7 @@
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
   <button type="submit" class="btn btn-primary">Enviar</button>
-</form>
+ </form>
     
   </nav>
 </main>
