--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="./CSS/main.css">
+  <link rel="stylesheet" href="./CSS/style.css">
 
   <meta name ="keywords" content="cortafuego, pasivo, construccion, fuego, ingenieria, chile, santiago">
   <title>Beck_Soluciones</title>
 </head>
 
 <body>
-
   <header class="headline">
     <div>
-      <img class="logoImg" src="../img/logo.jpg" alt="logoBeck">
+      <img class="logoImg" src="./img/logo.jpg" alt="logoBeck">
     </div>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -47,14 +45,17 @@
       </div>
     </nav>
   </header>
+
   <div>
-<img class="containerIlust" src="./img/index/IlustracionB.png" alt="edificioConCortaFuego"></div>
+    <img class="containerIlust" src="./img/index/IlustracionB.png" alt="edificioConCortaFuego"></div>
 
   <footer>
   <div class="containerFooter">
     <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
   </div>
  </footer>
+
 </body>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </html>
