--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <meta name ="keywords" content=", cortefuego, bloqueo, ingenieria, chile, santiago">
 
   <title>servicios</title>
-  <link rel="stylesheet" href="../CSS/main.css">
-</head>
+  <link rel="stylesheet" href="./CSS/style.css"></head>
 
 <body>
 
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="./index.html">Inicio</a>
+            <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./nuestro_trabajo.html">Nuestro Trabajo</a>
