--- a/pages/trabaja_con_nosotros.html
+++ b/pages/trabaja_con_nosotros.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <meta name ="keywords" content=", cortefuego, bloqueo,trabajo, maestro, ayudante, ingenieria, chile, santiago">
 
-  <title>nuestro trabajo</title>
-  <link rel="stylesheet" href="../CSS/main.css">
-
+  <title>Trabaja con BECK</title>
+  <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
   <header class="headline">
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="./index.html">Inicio</a>
+            <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./nuestro_trabajo.html">Nuestro Trabajo</a>
@@ -53,7 +53,7 @@
       <div class="cards">
         <div class="card translate">
           <img src="../img/trabaja_con_nosotros/cv.png">
-          <h3>Maestro carpintero</h3>
+          <h3 >Maestro carpintero</h3>
         </div>
 
         <div class="card translate">
