--- a/pages/hablemos.html
+++ b/pages/hablemos.html
@@ -6,7 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hablemos</title>
-  <link rel="stylesheet" href="./CSS/style.css">  <meta name ="keywords" content="cortafuego, cotizacion, contacto, ingenieria, chile, santiago">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="./CSS/style.css">  
+  <meta name ="keywords" content="cortafuego, cotizacion, contacto, ingenieria, chile, santiago">
 </head>
 
 <body>
@@ -15,17 +18,34 @@
     <div>
       <img class="logoImg" src="../img/logo.jpg" alt="logoBeck">
     </div>
-    <nav>
-      <ul class="subMenu">
-        <li class="subMenu_item"><a href="../index.html">Inicio</a></li>
-        <li class="subMenu_item"><a href="./nuestro_trabajo.html">Nuestro Trabajo </a></li>
-        <li class="subMenu_item"><a href="./servicio.html">Servicios </a></li>
-        <li class="subMenu_item"><a href="./conocenos.html">Conócenos</a></li>
-        <li class="subMenu_item"><a href="./trabaja_con_nosotros.html">Trabaja con nosotros</a></li>
-        <li class="subMenu_item"><a href="./hablemos.html">Hablemos</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./nuestro_trabajo.html">Nuestro Trabajo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./servicio.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./conocenos.html">Conócenos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./trabaja_con_nosotros.html">Trabaja con nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./hablemos.html">Hablemos</a>
+          </li>
+        </ul>
+      </div>
     </nav>
-  </header>
+
 
   <main>
     <nav class="mapImg">
@@ -70,5 +90,6 @@
     <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
   </div>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 </html>
