--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <a class="nav-link" href="./pages/conocenos.html">Conócenos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href=".pages/trabaja_con_nosotros.html">Trabaja con nosotros</a>
+            <a class="nav-link" href="./pages/trabaja_con_nosotros.html">Trabaja con nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href=".pages/hablemos.html">Hablemos</a>
+            <a class="nav-link" href="/pages/hablemos.html">Hablemos</a>
           </li>
         </ul>
       </div>
