--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -9,7 +9,7 @@
   <meta name ="keywords" content=", cortefuego, bloqueo, ingenieria, chile, santiago">
 
   <title>servicios</title>
-  <link rel="stylesheet" href="./CSS/style.css"></head>
+  <link rel="stylesheet" href="../CSS/style.css">
 
 <body>
 
