--- a/pages/trabaja_con_nosotros.html
+++ b/pages/trabaja_con_nosotros.html
@@ -8,7 +8,7 @@
   <meta name ="keywords" content=", cortefuego, bloqueo,trabajo, maestro, ayudante, ingenieria, chile, santiago">
 
   <title>Trabaja con BECK</title>
-  <link rel="stylesheet" href="./CSS/style.css">
+  <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
   <header class="headline">
