--- a/pages/trabaja_con_nosotros.html
+++ b/pages/trabaja_con_nosotros.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <meta name ="keywords" content=", cortefuego, bloqueo,trabajo, maestro, ayudante, ingenieria, chile, santiago">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <title>Trabaja con BECK</title>
   <link rel="stylesheet" href="../CSS/style.css">
 </head>
@@ -48,22 +46,22 @@
 
  <main>
     <section class="works" >
-      <h4>PUESTO A POSTULAR</h4>
+      <h3>POSTULA</h4>
 
       <div class="cards">
         <div class="card translate">
           <img src="../img/trabaja_con_nosotros/cv.png">
-          <h3 >Maestro carpintero</h3>
+          <h4 >Maestro carpintero</h4>
         </div>
 
         <div class="card translate">
           <img src="../img/trabaja_con_nosotros/cv.png">
-          <h3>Prevencionista de riesgos</h3>
+          <h4>Prevencionista de riesgos</h4>
         </div>
 
         <div class="card translate">
           <img src="../img/trabaja_con_nosotros/cv.png">
-          <h3>Asistente administrativa</h3>
+          <h4>Asistente administrativa</h4>
         </div>
 
       </div>
@@ -79,6 +77,5 @@
     <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
   </div>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </html>
