--- a/pages/hablemos.html
+++ b/pages/hablemos.html
@@ -6,9 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hablemos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-  <link rel="stylesheet" href="../CSS/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">  <link rel="stylesheet" href="../CSS/style.css">
   <meta name ="keywords" content="cortafuego, cotizacion, contacto, ingenieria, chile, santiago">
 </head>
 
@@ -45,9 +43,9 @@
         </ul>
       </div>
     </nav>
+  </header>
 
-
-  <main>
+   <main>
     <nav class="mapImg">
       <img src="../img/hablemos/map.jpg" alt="mapUbicacion">
     </nav>
@@ -67,21 +65,21 @@
    <div class="form-group">
     <label for="exampleFormControlSelect1">Selecciona tu motivo del mensaje</label>
     <select class="form-control" id="exampleFormControlSelect1">
-      <option>Cotizacion</option>
+      <option>Cotización</option>
+      <option>Consultas</option>
       <option>Felicitaciones</option>
       <option>Reclamos</option>
-      <option>Dudas</option>
       <option>Otros</option>
     </select>
-  </div>
-  <div class="form-group">
+   </div>
+   <div class="form-group">
     <label for="exampleFormControlTextarea1">Mensaje</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
-  <button type="submit" class="btn btn-primary">Enviar</button>
- </form>
+   </div>
+   <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
     
-  </nav>
+   </nav>
 </main>
 </body>
 
@@ -90,6 +88,5 @@
     <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
   </div>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </html>
