--- a/pages/nuestro_trabajo.html
+++ b/pages/nuestro_trabajo.html
@@ -5,9 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <meta name ="keywords" content="cortafuego, pasivo, bloqueo, metro de chile, hospital, paneles, trabajador,  instalacion, ingenieria, chile, santiago">
-  <title>Nuestro trabajo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">  <title>Nuestro trabajo</title>
   <link rel="stylesheet" href="../CSS/style.css">
 </head>
 
@@ -50,22 +48,22 @@
 
   <main>
     <section class="works" >
-      <h4>NUESTRO TRABAJO</h4>
+      <h3>NUESTRO TRABAJO</h3>
 
       <div class="cards">
         <div class="card translate">
           <img src="../img/nuestro_trabajo/metro .png">
-          <a href="https://www.metro.cl"><h3 class="textos translate">Metro</h3></a>
+          <a href="https://www.metro.cl"><h4 class="textos translate">Metro</h4></a>
         </div>
 
         <div class="card translate">
           <img src="../img/nuestro_trabajo/hospSalvador.png">
-          <a href="https://www.hsalvador.cl"><h3 class="textos translate"3>Hospital El Salvador</h3></a>
+          <a href="https://www.hsalvador.cl"><h4 class="textos translate"3>Hospital El Salvador</h4></a>
         </div>
 
         <div class="card translate">
           <img src="../img/nuestro_trabajo/falabella .png">
-          <a href="https://www.falabella.com"><h3 class="textos translate">Falabella</h3></a>
+          <a href="https://www.falabella.com"><h4 class="textos translate">Falabella</h4></a>
         </div>
 
       </div>
@@ -82,6 +80,5 @@
     <h5>Copyright © 2023 Beck Soluciones | Powered by Beck Soluciones</h5>
   </div>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </html>
