--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="headline">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-      <a class="navbar-brand" href="https://becksoluciones.000webhostapp.com/index.html"><img src="../img/logo.jpg"
+      <a class="navbar-brand" href="https://becksoluciones.000webhostapp.com/index.html"><img src="./img/logo.jpg"
           alt="logoBeck"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
