--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -50,7 +50,7 @@
 
   <main>
     <h3>Conóce nuestros clientes</h3>
-    <section class="clientes">
+    <section class="works">
       
       <div class="cards">
         <div class="card translate">
